[tool.poetry]
name = "hotel-booking-window"
version = "0.1.0"
description = ""
authors = ["Kathy Ems <kathy-ems@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.2"
tim = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
